--- a/clientereact/src/styles/main/admin/admin.css
+++ b/clientereact/src/styles/main/admin/admin.css
@@ -42,9 +42,9 @@
     border: 3px solid black;
     border-radius: 5px;
     padding: 5px;
-}
-
-.logoOwners{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.5em;
 }
 
