--- a/clientereact/src/styles/main/owners/SectionAdmin.css
+++ b/clientereact/src/styles/main/owners/SectionAdmin.css
@@ -9,24 +9,27 @@
     justify-content: center;
 }
 
-.containerSections{
-    margin: 50px auto 0;
+.containerElements{
+    margin: 20px auto 0;
     display: flex;
     flex-direction: column;
-    width: 75vw;
+    width: 90vw;
     height: auto;
     align-items: center;
     justify-content: center;
-    gap: 50px;
 }
 
-.containerSections>div{
-    background-color: #e6e6e6;
+.containerElements>div{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    width: 300px;
-    height: 300px;
-    border-radius: 3px;
+    width: 100%;
+    height: 70px;
+    border-bottom: black 2px solid;
+
+}
+
+.containerElements>div>div{
+    display: flex;
+    gap: 10px;
 }
