--- a/clientereact/src/styles/main/admin/admin.css
+++ b/clientereact/src/styles/main/admin/admin.css
@@ -2,13 +2,19 @@
     position: relative;
     top: 10px;
     background-color: #e6e6e6;
-    font-size: 2.5em;
     display: flex;
     align-items: center;
     margin: 20px;
     padding-left: 25px;
     border: 2px solid black;
 }
+.defaultTitle>p{
+    margin: 0;
+}
+.tituloAdmin{
+    font-size: 2.5em;
+}
+
 .logoAdmin{
     position: relative;
     width: 100px;
@@ -54,9 +60,13 @@
 
 .restaurantName
 {
+    margin: 0;
+    text-align: center;
     font-size: 1.2em;
     font-weight: bold;
-    word-wrap: break-word;
+    width: 250px;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .containerActionButtons{
@@ -89,6 +99,7 @@
     color: red;
     padding: 20px;
 }
+
 
 
 
