--- a/clientereact/src/styles/main/admin/admin.css
+++ b/clientereact/src/styles/main/admin/admin.css
@@ -6,7 +6,7 @@
     align-items: center;
     margin: 20px;
     padding-left: 25px;
-    border: 2px solid black;
+    border: 2px solid #c8c8c8;
 }
 .defaultTitle>p{
     margin: 0;
@@ -100,6 +100,12 @@
     padding: 20px;
 }
 
+@media (max-width: 600px) {
+    .defaultTitle{
+       margin: 20px 0;
+        height: 40px;
+    }
+}
 
 
 
