--- a/clientereact/src/styles/cards/foodCard.css
+++ b/clientereact/src/styles/cards/foodCard.css
@@ -1,7 +1,8 @@
 .card {
+    margin: auto;
     width: 200px;
     height: 200px;
-    background-color: #555;
+    background-color: #8c8c8c;
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -12,12 +13,15 @@
     align-items: center;
     justify-content: center;
 
-    p{
+    >p{
         font-weight: bold;
+        font-size: 1.2em;
     }
 }
 
 .foodimg{
+    max-width: 100px;
+    max-height: 100px;
     position: relative;
     top: 0;
 }
