--- a/clientereact/src/styles/buttons/owner/addButton.css
+++ b/clientereact/src/styles/buttons/owner/addButton.css
@@ -1,6 +1,6 @@
 .crossAddButton{
     position: absolute;
-    left: 10px;
+    left: 4%;
     width: 40px !important;
     height: auto !important;
     transform: rotate(45deg);
@@ -18,4 +18,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media only screen and (max-width: 350px) {
+    .addButton{
+        font-size: 1.2em;
+    }
+    .crossAddButton{
+        width: 30px !important;
+        height: auto !important;
+    }
 }
