--- a/clientereact/src/styles/cards/ContainerFoodCards.css
+++ b/clientereact/src/styles/cards/ContainerFoodCards.css
@@ -1,7 +1,7 @@
-.containerFoodCards{
+.containerFoodCards {
     width: 90vw;
     height: 90vh;
-    background-color: white;
+    background-color: #f5f5f5;
     display: flex;
     flex-wrap: wrap;
     padding: 10px 0 0;
@@ -10,21 +10,27 @@
     margin: 20px 0;
     gap: 10px;
     overflow: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
-.logoOwnerSections{
+
+.logoOwnerSections {
     margin: 0 auto;
     max-width: 100px;
 }
-.tituloSections{
+
+
+.tituloSections {
     font-family: insaniburger;
     width: 70vw;
     text-align: center;
     font-size: 1.8em;
     margin: 0 auto;
     word-wrap: break-word;
+    color: #333;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-.containerFoodCards>div{
+.containerFoodCards > div {
     width: 100%;
     height: max-content;
     display: grid;
@@ -33,11 +39,17 @@
     justify-content: center;
     margin: 10px auto 0;
     gap: 30px;
+    background-color: #ffffff;
+    padding: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s, transform 0.3s;
 }
+
+
 
 @media (min-width: 600px) {
     .containerFoodCards>div{
-        grid-template-columns: repeat(2, 1fr); /* Cambiar a dos columnas cuando el width sea mayor a 600px */
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
