--- a/clientereact/src/styles/main/selectiOption.css
+++ b/clientereact/src/styles/main/selectiOption.css
@@ -11,17 +11,17 @@
 .contenedorPermisos>div{
     width: 75vw;
     padding: 20px;
-    border: 3px solid #c8c8c8;
-    border-radius: 3px;
-    background-color: #e6e6e6;
+    border: 2px solid black;
+    border-radius: 5px;
     text-align: center;
     font-size: 1.2em;
     text-wrap: pretty;
+    font-weight: bold;
 }
 
 .logoOwner{
     display: block;
-    margin: 50px auto 50px;
+    margin: 50px auto 30px;
     width: 150px;
     height: auto;
 }
