--- a/clientereact/src/styles/forms/loginForm.css
+++ b/clientereact/src/styles/forms/loginForm.css
@@ -1,98 +1,101 @@
-.container{
+.container {
     position: absolute;
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+}
+
+.container > div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.loginForm{
+.loginForm {
     background: #e6e6e6;
     border: 5px solid #c8c8c8;
     border-radius: 5px;
-    width: 400px;
+    width: 80%;
     height: min-content;
     padding: 15px;
     display: flex;
     flex-direction: column;
 }
 
-.loginForm>div{
+.loginForm > div {
     display: flex;
     flex-direction: column;
-    margin-bottom: 15px;
+    margin-bottom: 3vw;
 }
-.labelloginform{
-    margin-bottom: 5px;
-    font-size: 1.5em;
+
+.labelloginform {
+    margin-bottom: 2vw;
+    font-size: 5vw;
     text-align: inherit;
 }
 
-.loginForm>div>input{
-    font-size: 1.2em;
+.loginForm > div > input {
+    font-size: 4vw;
     border: 5px solid #c8c8c8;
     border-radius: 3px;
 }
 
-.loginForm>div>input:focus-visible {
+.loginForm > div > input:focus-visible {
     outline: black solid 1px;
-    font-size: 1.2em;
     border: 5px solid #c8c8c8;
 }
 
-#loginError{
-    display: none;
+#loginError {
     border: 2px solid red;
     text-align: center;
-    padding: 10px;
+    font-size: 4vw;
+    padding: 3vw;
     color: red;
-    margin-top: 15px;
+    margin-top: 2vw;
+    background-color: #f8d7da;
+    position: relative;
 }
 
-.logo{
-    position: absolute;
-    top: 50px;
-    width: 150px;
+.logo {
+    position: relative;
+    width: 20vw;
     height: auto;
+    margin-bottom: 2vw;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (min-width: 450px) {
 
     .loginForm {
-        width: 300px;
-        padding: 10px;
+        width: 400px;
     }
 
     .loginForm > div {
-        display: flex;
-        flex-direction: column;
         margin-bottom: 10px;
     }
 
     .labelloginform {
-        margin-bottom: 3px;
+        margin-bottom: 15px;
         font-size: 1.2em;
     }
 
     .loginForm > div > input {
-        font-size: 1em;
-    }
-
-    .loginForm > div > input:focus-visible {
-        font-size: 1em;
+        font-size: 15px;
     }
 
     #loginError {
-        padding: 5px;
-        margin-top: 10px;
+        font-size: 1.2em;
+        padding: 15px;
+        margin-top: 15px;
     }
 
     .logo {
-        top: 20%;
-        width: 100px;
+        width: 10vw;
     }
-
 }
+
 
 
