--- a/MAUIAPP/BarHub/Pages/BarHubBaseContentPage.xaml
+++ b/MAUIAPP/BarHub/Pages/BarHubBaseContentPage.xaml
@@ -1,12 +1,14 @@
-<ContentPage 
+<uranium:UraniumContentPage 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="BarHub.Pages.BarHubBaseContentPage"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:uranium="http://schemas.enisn-projects.io/dotnet/maui/uraniumui"
+    xmlns:components="clr-namespace:BarHub.Pages.GlobalComponents"
     xmlns:pages="clr-namespace:BarHub.Pages"
     x:Name="this">
 
-    <ContentPage.Resources>
+    <uranium:UraniumContentPage.Resources>
         <ResourceDictionary>
             <ControlTemplate x:Key="HeaderControlTemplate">
                 <Grid RowDefinitions="Auto,*">
@@ -20,13 +22,16 @@
                 </Grid>
             </ControlTemplate>
         </ResourceDictionary>
-    </ContentPage.Resources>
+    </uranium:UraniumContentPage.Resources>
 
 
 
-    <ContentPage.Behaviors>
+    <uranium:UraniumContentPage.Behaviors>
         <toolkit:StatusBarBehavior 
             StatusBarColor="{StaticResource Black}" 
             StatusBarStyle="LightContent" />
-    </ContentPage.Behaviors>
-</ContentPage>
+    </uranium:UraniumContentPage.Behaviors>
+    <uranium:UraniumContentPage.Attachments>
+        <components:FloatingActionButton Ruta="{Binding FabRoute,Source={x:Reference this}}" IsVisible="False"/>
+    </uranium:UraniumContentPage.Attachments>
+</uranium:UraniumContentPage>
