--- a/MAUIAPP/BarHub/Pages/Admin/CardRestaurant.xaml
+++ b/MAUIAPP/BarHub/Pages/Admin/CardRestaurant.xaml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:models="clr-namespace:BarHub.Models;assembly=BarHub.Models"
-             xmlns:touchEffects="clr-namespace:Maui.FreakyEffects.TouchEffects;assembly=Maui.FreakyEffects"
-             x:Class="BarHub.Pages.Admin.CardRestaurant"
-             x:Name="this"
-             x:DataType="models:Restaurant">
-    <HorizontalStackLayout HorizontalOptions="Fill" Padding="20" Spacing="10" touchEffects:TouchEffect.Color="{AppThemeBinding Light={StaticResource RippleDark}, Dark={StaticResource RippleLight}}">
-        <Image Source="{Binding Logo}" WidthRequest="30"/>
-        <Label Text="{Binding Name}" VerticalOptions="Center" FontAttributes="Bold"/>
+<ContentView
+    x:Class="BarHub.Pages.Admin.CardRestaurant"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:models="clr-namespace:BarHub.Models;assembly=BarHub.Models"
+    xmlns:touchEffects="clr-namespace:Maui.FreakyEffects.TouchEffects;assembly=Maui.FreakyEffects"
+    xmlns:viewModels="clr-namespace:BarHub.ViewModel.Admin"
+    x:Name="this"
+    x:DataType="models:Restaurant">
+    <HorizontalStackLayout
+        Padding="20"
+        touchEffects:TouchEffect.Color="{AppThemeBinding Light={StaticResource RippleDark},
+                                                         Dark={StaticResource RippleLight}}"
+        HorizontalOptions="Fill"
+        Spacing="10">
+        <Image Source="{Binding Logo}" WidthRequest="30" />
+        <Label
+            FontAttributes="Bold"
+            Text="{Binding Name}"
+            VerticalOptions="Center" />
         <HorizontalStackLayout.GestureRecognizers>
             <TapGestureRecognizer Tapped="OnNavigateToEditRestaurant"/>
         </HorizontalStackLayout.GestureRecognizers>
