--- a/MAUIAPP/BarHub/Pages/Admin/ManageRestaurant.xaml
+++ b/MAUIAPP/BarHub/Pages/Admin/ManageRestaurant.xaml
@@ -42,6 +42,7 @@
                         BorderColor="{AppThemeBinding Light={StaticResource Black},
                                                       Dark={StaticResource White}}"
                         BorderWidth=".5"
+                        Command="{Binding PickFileCommand}"
                         FontAttributes="Bold"
                         Text="Insertar Logo" />
                 </VerticalStackLayout>
@@ -117,7 +118,7 @@
                 BorderWidth=".5"
                 CornerRadius="5"
                 FontAttributes="Bold"
-                Text="{Binding ButtonText}" />
+                Text="{Binding ButtonText}" Command="{Binding ActionButtonPressedCommand}"/>
         </VerticalStackLayout>
 
     </ContentView>
