--- a/MAUIAPP/BarHub/Pages/Profile/ProfilePage.xaml
+++ b/MAUIAPP/BarHub/Pages/Profile/ProfilePage.xaml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BarHub.Pages.Profile.ProfilePage"
-             Title="ProfilePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentPage
+    x:Class="BarHub.Pages.Profile.ProfilePage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+    xmlns:viewmodels="clr-namespace:BarHub.ViewModel.Profile"
+    x:DataType="viewmodels:ProfileViewModel"
+    Shell.NavBarIsVisible="False">
+    <Grid>
+        <VerticalStackLayout Padding="0,100,0,0" HorizontalOptions="Center">
+            <Image
+                HorizontalOptions="Center"
+                Source="{FontImageSource FontFamily=FASolid,
+                                         Glyph={x:Static fa:Solid.CircleUser},
+                                         Color={StaticResource Muted},
+                                         Size=100}"
+                VerticalOptions="End"
+                WidthRequest="100" />
+            <Label
+                FontAttributes="Bold"
+                FontSize="32"
+                HorizontalOptions="Center"
+                Text="{Binding User.Name}"
+                VerticalOptions="Center" />
+            <Label
+                FontSize="20"
+                HorizontalOptions="Center"
+                Text="{Binding User.UserName}"
+                VerticalOptions="Center" />
+
+            <Label
+                HorizontalOptions="Center"
+                Text="{Binding User.RolesString}"
+                VerticalOptions="Center" />
+
+            <ImageButton Margin="0,10,0,0" Source="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.Gear}, Color={AppThemeBinding Light=Black, Dark=White}}"  WidthRequest="25"/>
+        </VerticalStackLayout>
+    </Grid>
 </ContentPage>
